syntax = "proto3";

option go_package = "github.com/couchbase/stellar-nebula/genproto/couchbase_v1;couchbase_v1";
option ruby_package = "Couchbase::StellarNebula::Generated::V1";

package com.couchbase.v1;

message MutationToken {
  string bucket_name = 1;
  uint32 vbucket_id = 2;
  uint64 vbucket_uuid = 3;
  uint64 seq_no = 4;
}

message MutationState { repeated MutationToken tokens = 1; }
